Fix race condition. SERVER-532